syntax="proto3";
package proto;     // 指定包名
option go_package = "logproto";
//protoc --go_out=plugins=grpc:. bidInfo.proto
//protoc -I=./proto --java_out=./ ./proto/event.proto
enum DEALTYPE {
  UNKNOW = 0;
  CPC = 1;
  CPM = 2;
}

enum EVENTTYPE {
    EVENT_UNKNOW = 0;
    REQUEST    = 1; //请求
    SEND       = 2; //下发
    WINNOTICE  = 3; //中签
    IMPRESSION = 4; //展示
    CLICK      = 5; //点击
}

message RequestInfo {
   int64    publisher_id = 1; //PUBLISHER唯一ID
   int64    app_id       = 2; //APP唯一ID
   int64    country_id   = 3; //国家ID
   int64    carrier_id   = 4; //运营商ID
   int64    ad_id        = 5; //广告位id
   int64    ad_type      = 6;//广告类型
   int64    width        = 7;//宽
   int64    height       = 8;//高
   string   iab1         = 9;//iab1
   string   iab2         = 10;//iab2 
   string   ip           = 11; //IP地址
   string   raw_request  = 12; //请求内容
}
message TradeInfo {
   DEALTYPE deal_type      = 11; //交易类型
   int64    dsp_id         = 10; //DSP唯一ID, winner
   int64    status         = 14; //dsp請求是否有返回 有:1 否:0
   int64    is_show         = 18;//是否显示 1。不現實
   double   bid_price      = 12; //竞价
   double   clear_price    = 22; //返回内容    
   double   media_price    = 13; //渠道竞价
   string   win_notice_url = 15; //中签URL
   string   click_url      = 16; //点击URL
   string   pixel_url      = 17; //pixelUrl
   string   raw_response   = 21; //返回内容

}
message Request {
   string      click_id  = 1; // Click Id
   RequestInfo request   = 3;
   TradeInfo   trade     = 4;
}
message Send {
   string      click_id  = 1; // Click Id
   RequestInfo request   = 3;
   TradeInfo   trade     = 4;
}
message WinNotice {
   string      click_id  = 1; // Click Id
   RequestInfo request   = 3;
   TradeInfo   trade     = 4;
}
message Impression {
   string      click_id  = 1; // Click Id
   RequestInfo request   = 3;
   TradeInfo   trade     = 4;
}
message Click {
   string      click_id  = 1; // Click Id
   RequestInfo request   = 3;
   TradeInfo   trade     = 4;
}

message Event {
  //事件类型
   int64      timestamp  = 1;    
   EVENTTYPE  event_type = 2;
   string     event_key  = 3;
   Request    request    = 4;
   Send       send       = 5;
   WinNotice  win_notice = 6;
   Impression impression = 7;
   Click      click      = 8;
}